--- a/OneDrive/Documents/airbnb-backend/requirements.txt
+++ b/OneDrive/Documents/airbnb-backend/requirements.txt
@@ -1,3 +1,23 @@
-Django==6.0
-djangorestframework==3.15.2
-django-filter==24.3
+djangorestframework>=3.14
+django-filter>=23.0
+graphene-django>=3.0
+psycopg2-binary>=2.9
+celery>=5.3
+redis>=5.0
+Pillow>=10.0
+python-dotenv>=1.0
+django-cors-headers>=4.0
+drf-yasg>=1.21
+pytest-django>=4.5
+Django>=6.0
+djangorestframework>=3.14
+django-filter>=23.0
+graphene-django>=3.0
+psycopg2-binary>=2.9
+celery>=5.3
+redis>=5.0
+Pillow>=10.0
+python-dotenv>=1.0
+django-cors-headers>=4.0
+drf-yasg>=1.21
+pytest-django>=4.5
