--- a/OneDrive/Documents/airbnb-backend/Procfile
+++ b/OneDrive/Documents/airbnb-backend/Procfile
@@ -1,3 +1,3 @@
-web: gunicorn airbnb.wsgi:application --bind 0.0.0.0:$PORT
-worker: celery -A airbnb worker --loglevel=info
-beat: celery -A airbnb beat --loglevel=info
+web: gunicorn airbnb.wsgi:application --log-file -
+worker: celery -A airbnb worker -l info
+beat: celery -A airbnb beat -l info
