--- a/OneDrive/Documents/airbnb-backend/.github/workflows/django-ci-cd.yml
+++ b/OneDrive/Documents/airbnb-backend/.github/workflows/django-ci-cd.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -26,11 +29,6 @@ jobs:
 
       rabbitmq:
         image: rabbitmq:3-management
-        options: >-
-          --health-cmd "rabbitmq-diagnostics ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
         ports:
           - 5672:5672
           - 15672:15672
@@ -42,25 +40,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-
-      - name: Cache pip packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run linting (optional)
-        run: |
-          pip install flake8
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics || true
 
       - name: Run migrations
         env:
@@ -73,15 +58,9 @@ jobs:
           DB_PORT: 5432
           CELERY_BROKER_URL: amqp://guest:guest@localhost:5672//
           CELERY_RESULT_BACKEND: rpc://
+          CELERY_TASK_ALWAYS_EAGER: "True"
         run: |
           python manage.py migrate --noinput
-
-      - name: Collect static files
-        env:
-          DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY || 'test-key-for-ci' }}
-          DEBUG: "False"
-        run: |
-          python manage.py collectstatic --noinput || true
 
       - name: Run tests
         env:
@@ -96,12 +75,13 @@ jobs:
           CELERY_RESULT_BACKEND: rpc://
           CELERY_TASK_ALWAYS_EAGER: "True"
         run: |
-          python manage.py test --noinput
+          python manage.py test
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
