--- a/OneDrive/Documents/airbnb-backend/.env.example
+++ b/OneDrive/Documents/airbnb-backend/.env.example
@@ -45,9 +45,49 @@ CORS_ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 # EMAIL CONFIGURATION (For production notifications)
 # ============================================================================
 
+# Email backend (default: console for development)
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-EMAIL_HOST=smtp.yourprovider.com
+
+# Gmail configuration example:
+EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your-gmail@gmail.com
+EMAIL_HOST_PASSWORD=your-app-specific-password
+
+# Or SendGrid configuration:
+# EMAIL_BACKEND=sendgrid_backend.SendgridBackend
+# SENDGRID_API_KEY=your-sendgrid-api-key
+
+# Default from addresses
+DEFAULT_FROM_EMAIL=noreply@yourdomain.com
+SERVER_EMAIL=server@yourdomain.com
+
+# ============================================================================
+# CELERY CONFIGURATION
+# ============================================================================
+
+CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
+CELERY_RESULT_BACKEND=redis://redis:6379/0
+CELERY_TASK_ALWAYS_EAGER=False
+
+# ============================================================================
+# RABBITMQ CONFIGURATION
+# ============================================================================
+
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+
+# ============================================================================
+# GITHUB ACTIONS SECRETS (Configure in GitHub)
+# ============================================================================
+
+# Add these as GitHub Repository Secrets (Settings > Secrets and variables > Actions):
+# - DJANGO_SECRET_KEY (generate with: python manage.py shell -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())")
+# - RENDER_SERVICE_ID (from Render dashboard)
+# - RENDER_API_KEY (from Render account settings)
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@example.com
 EMAIL_HOST_PASSWORD=your-email-app-password
