Add comprehensive monitoring: Sentry, health checks, performance tracking, metrics, and logging

--- a/OneDrive/Documents/airbnb-backend/.env.example
+++ b/OneDrive/Documents/airbnb-backend/.env.example
@@ -98,26 +98,23 @@ ADMIN_EMAIL=admin@yourdomain.com
 # ============================================================================
 # CLOUD STORAGE (AWS S3 - Optional)
 # ============================================================================
-
-# AWS S3 for static and media files
-AWS_ACCESS_KEY_ID=your-aws-access-key
-AWS_SECRET_ACCESS_KEY=your-aws-secret-key
-AWS_STORAGE_BUCKET_NAME=airbnb-backend-media
-AWS_S3_REGION_NAME=us-east-1
-AWS_S3_CUSTOM_DOMAIN=${AWS_STORAGE_BUCKET_NAME}.s3.amazonaws.com
-
-# Use S3 for static/media files (0=local, 1=S3)
-USE_S3=0
-
-# ============================================================================
 # MONITORING & LOGGING
 # ============================================================================
 
-# Sentry DSN for error tracking (optional)
-SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
+# Sentry Configuration (Error Tracking)
+# Get your DSN from: https://sentry.io/
+SENTRY_DSN=https://your-sentry-key@sentry.io/project-id
+SENTRY_ENVIRONMENT=production
+SENTRY_RELEASE=1.0.0
 
 # Log level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
+
+# Health check endpoints
+# /health/ - Overall health status
+# /health/live/ - Liveness probe (is app running?)
+# /health/ready/ - Readiness probe (is app ready to serve?)
+# /metrics/ - Prometheus metrics
 
 # ============================================================================
 # SECURITY HEADERS
