--- a/OneDrive/Documents/airbnb-backend/requirements.txt
+++ b/OneDrive/Documents/airbnb-backend/requirements.txt
@@ -33,3 +33,10 @@ sentry-sdk>=1.45
 
 # Health checks
 django-health-check>=3.16
+
+# Rate limiting & JWT
+djangorestframework-simplejwt>=5.3
+django-ratelimit>=4.1
+
+# Caching
+django-redis>=5.4
