--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,6 @@
 services:
-
-  # Redis Cache
-  - type: redis
+  # Redis-compatible Key Value Store
+  - type: keyvalue
     name: airbnb-redis
     plan: starter
     maxmemoryPolicy: allkeys-lru
@@ -10,10 +9,10 @@ services:
   # Web Service (Django API)
   - type: web
     name: airbnb-backend-web
-    env: docker
+    runtime: docker
     dockerfilePath: ./Dockerfile.prod
     plan: starter
-    healthCheckPath: /admin/
+    healthCheckPath: /health/
     numInstances: 1
     envVars:
       - key: SECRET_KEY
@@ -23,9 +22,13 @@ services:
       - key: ALLOWED_HOSTS
         value: .onrender.com
       - key: DB_NAME
-        value: airbnb_production
+        fromDatabase:
+          name: airbnb-postgres
+          property: databaseName
       - key: DB_USER
-        value: airbnb_user
+        fromDatabase:
+          name: airbnb-postgres
+          property: user
       - key: DB_PASSWORD
         fromDatabase:
           name: airbnb-postgres
@@ -38,10 +41,14 @@ services:
         fromDatabase:
           name: airbnb-postgres
           property: port
+      - key: DATABASE_URL
+        fromDatabase:
+          name: airbnb-postgres
+          property: connectionString
       - key: REDIS_URL
         fromService:
           name: airbnb-redis
-          type: redis
+          type: keyvalue
           property: connectionString
       - key: PYTHON_VERSION
         value: "3.12"
@@ -53,15 +60,23 @@ services:
   # Celery Worker
   - type: worker
     name: airbnb-celery-worker
-    env: docker
+    runtime: docker
     dockerfilePath: ./Dockerfile.prod
     dockerCommand: celery -A airbnb worker --loglevel=info --concurrency=2
     plan: starter
     envVars:
+      - key: SECRET_KEY
+        generateValue: true
+      - key: DEBUG
+        value: "0"
       - key: DB_NAME
-        value: airbnb_production
+        fromDatabase:
+          name: airbnb-postgres
+          property: databaseName
       - key: DB_USER
-        value: airbnb_user
+        fromDatabase:
+          name: airbnb-postgres
+          property: user
       - key: DB_PASSWORD
         fromDatabase:
           name: airbnb-postgres
@@ -74,24 +89,36 @@ services:
         fromDatabase:
           name: airbnb-postgres
           property: port
+      - key: DATABASE_URL
+        fromDatabase:
+          name: airbnb-postgres
+          property: connectionString
       - key: REDIS_URL
         fromService:
           name: airbnb-redis
-          type: redis
+          type: keyvalue
           property: connectionString
 
   # Celery Beat (Scheduled Tasks)
   - type: worker
     name: airbnb-celery-beat
-    env: docker
+    runtime: docker
     dockerfilePath: ./Dockerfile.prod
     dockerCommand: celery -A airbnb beat --loglevel=info
     plan: starter
     envVars:
+      - key: SECRET_KEY
+        generateValue: true
+      - key: DEBUG
+        value: "0"
       - key: DB_NAME
-        value: airbnb_production
+        fromDatabase:
+          name: airbnb-postgres
+          property: databaseName
       - key: DB_USER
-        value: airbnb_user
+        fromDatabase:
+          name: airbnb-postgres
+          property: user
       - key: DB_PASSWORD
         fromDatabase:
           name: airbnb-postgres
@@ -104,14 +131,19 @@ services:
         fromDatabase:
           name: airbnb-postgres
           property: port
+      - key: DATABASE_URL
+        fromDatabase:
+          name: airbnb-postgres
+          property: connectionString
       - key: REDIS_URL
         fromService:
           name: airbnb-redis
-          type: redis
+          type: keyvalue
           property: connectionString
 
 databases:
   - name: airbnb-postgres
     databaseName: airbnb_production
     user: airbnb_user
-    plan: starter
+    plan: free
+    postgresMajorVersion: 16
